--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
-[!]   Detect the website on which the keylogger is operating.
+[!]   Detect the website which the keylogger is operating on.
 [!]   Detect input fields' IDs.
 [!]   Beautify log file (e.g. organize entries by logging time).
